syntax = "proto3";

package order;


message Order {
  string id = 1;
  string title = 2;
  string description = 3;

}

message GetOrderRequest {
  string order_id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message SearchOrdersRequest {
  string query = 1;
}

message SearchOrdersResponse {
  repeated Order orders = 1;
}

service OrderService {
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc SearchOrders(SearchOrdersRequest) returns (SearchOrdersResponse);

}